@@ -50,8 +50,21 @@ _wrap_g_file_info_list_attributes(PyGObject *self,
 
     return ret;
 }
+%%
+override g_file_info_get_modification_time noargs
+static PyObject *
+_wrap_g_file_info_get_modification_time(PyGObject *self, PyObject *unused)
+{
+    GTimeVal timeval;
+    double ret;
+
+    g_file_info_get_modification_time(G_FILE_INFO(self->obj), &timeval);
+
+    ret = (double)timeval.tv_sec + (double)timeval.tv_usec * 0.000001;
+    return PyFloat_FromDouble(ret);
+}
+
 /* GFileInfo.get_attribute_data: No ArgType for GFileAttributeType* */
 /* GFileInfo.set_attribute: No ArgType for gpointer */
-/* GFileInfo.get_modification_time: No ArgType for GTimeVal* */
 /* GFileInfo.set_attribute_mask: No ArgType for GFileAttributeMatcher* */
 /* GFileInfo.set_modification_time: No ArgType for GTimeVal* */
