@@ -1,5 +1,13 @@
 2008-08-01  Johan Dahlin  <johan@gnome.org>
 
+	Bug 545861 – g_file_info_get_modification_time is missing
+	* gio/gfileinfo.override:
+	* gio/gio.defs:
+	* tests/test_gio.py:
+	Wrap, add test and documentation
+
+2008-08-01  Johan Dahlin  <johan@gnome.org>
+
 	Bug 545846 – g_vfs_get_supported_uri_schemes is missing
 
 	* gio/gio.defs:
